# ros1_exoskeleton_maxon_simulation

./: CMakeLists.txt  LICENSE  README.md
exo_stand/: CMakeLists.txt  package.xml
exo_stand/config/: joint_names_exo_stand.yaml  joint_trajectory_controller.yaml
exo_stand/launch/: display.launch  gazebo.launch  leg_urdf.launch
exo_stand/meshes/: link1.STL  link2.STL  link3.STL  link4.STL
exo_stand/urdf/: exo_stand.csv  exo_stand.urdf
exo_stand_control/: CMakeLists.txt  package.xml
exo_stand_control/scripts/: exo_stand_add_obstacles.py  exo_stand_fk.py  exo_stand_fk_csp.py
exo_stand_control/src/: exo_stand_add_obstacles.cpp  exo_stand_continue_trajectory.cpp  exo_stand_fk.cpp  exo_stand_fk_csp.cpp  exo_stand_orientation.cpp  exo_stand_pointcloud_orientation.cpp
exo_stand_moveit_config/: CMakeLists.txt  package.xml
exo_stand_moveit_config/config/: exo_stand.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  new_ros_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_D435i_pointcloud.yaml
exo_stand_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  exo_stand_intelD435i_obstacle_pointcloud.launch  exo_stand_moveit_controller_manager.launch.xml  exo_stand_moveit_sensor_manager.launch.xml  fake_moveit_controller_manager.launch.xml  full_leg_sim.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  (+4 more)
exo_stand_status/: CMakeLists.txt  package.xml
(+10 files in other folders)
